Dodanie testowej funkcjonalnosci przyciskow do komunikacji z firebase

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,5 +3,7 @@
 {% block body %}
 
 <a href="{{ url_for('logout') }}" class="btn btn-primary m-1">Logout</a>
+<a href="{{ url_for('firebase', request = 'send') }}" class="btn btn-primary m-1">Wyślij dane do Firebase</a>
+<a href="{{ url_for('firebase', request = 'recieve')}}" class="btn btn-primary m-1">Odbierz dane z Firebase</a>
 
 {% endblock %}
